--- a/index_new.html
+++ b/index_new.html
@@ -6,30 +6,125 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f2f4f7; margin: 0; padding: 0; }
-    header { background: #1e4e79; color: white; padding: 24px; text-align: center; font-size: 24px; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
-    .container { max-width: 900px; margin: 30px auto; padding: 0 20px; }
-    .section { background: white; padding: 22px; border-radius: 14px; margin-bottom: 25px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); }
-    .section h2 { margin-top: 0; color: #1e4e79; font-size: 20px; font-weight: 600; border-left: 6px solid #1e4e79; padding-left: 10px; }
-    label { font-weight: 600; display: block; margin-top: 14px; font-size: 15px; }
-    select, input { width: 100%; padding: 12px; margin-top: 6px; border-radius: 8px; border: 1px solid #b3b3b3; background: #fafafa; font-size: 15px; }
-    button { width: 100%; padding: 15px; margin-top: 25px; background: #1e4e79; color: white; border: none; font-size: 18px; border-radius: 10px; cursor: pointer; font-weight: 600; box-shadow: 0 3px 6px rgba(0,0,0,0.2); }
-    button:hover { background: #163d61; }
-    .output { background: #ffffff; padding: 25px; margin-top: 15px; border-left: 6px solid #1e4e79; border-radius: 12px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); font-size: 16px; line-height: 1.6; white-space: pre-line; }
-    .output-title { font-size: 20px; font-weight: 600; color: #1e4e79; margin-bottom: 12px; }
-    .highlight-red { color: #c62828; font-weight: 600; }
-    .highlight-green { color: #2e7d32; font-weight: 600; }
+    body {
+        font-family: 'Segoe UI', Arial, sans-serif;
+        background: #f2f4f7;
+        margin: 0;
+        padding: 0;
+    }
+
+    header {
+        background: #1e4e79;
+        color: white;
+        padding: 20px;
+        text-align: center;
+        font-size: 24px;
+        font-weight: 700;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+    }
+
+    .banner {
+        background: #1e4e79;
+        color: #ffffff;
+        padding: 14px 18px;
+        margin: 18px;
+        border-radius: 10px;
+        font-size: 14px;
+        line-height: 1.5;
+        box-shadow: 0 3px 8px rgba(0,0,0,0.18);
+    }
+
+    .container {
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+
+    .section {
+        background: white;
+        padding: 22px;
+        border-radius: 14px;
+        box-shadow: 0 3px 10px rgba(0,0,0,0.12);
+        margin-bottom: 20px;
+    }
+
+    .section h2 {
+        margin-top: 0;
+        color: #1e4e79;
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+    label {
+        font-weight: 600;
+        display: block;
+        margin-top: 10px;
+        font-size: 15px;
+    }
+
+    select, input {
+        width: 100%;
+        padding: 12px;
+        margin-top: 6px;
+        border-radius: 8px;
+        border: 1px solid #b3b3b3;
+        background: #fafafa;
+        font-size: 15px;
+    }
+
+    button {
+        width: 100%;
+        padding: 14px;
+        margin-top: 20px;
+        background: #1e4e79;
+        color: white;
+        border: none;
+        font-size: 18px;
+        border-radius: 10px;
+        cursor: pointer;
+        font-weight: 600;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    }
+
+    button:hover {
+        background: #163d61;
+    }
+
+    .output {
+        background: white;
+        padding: 25px;
+        border-left: 6px solid #1e4e79;
+        border-radius: 12px;
+        font-size: 16px;
+        line-height: 1.6;
+        box-shadow: 0 3px 10px rgba(0,0,0,0.12);
+    }
+
+    .output-title {
+        font-size: 20px;
+        color: #1e4e79;
+        font-weight: 700;
+        margin-bottom: 12px;
+    }
+
 </style>
 </head>
 
 <body>
 
-<header>💊 Decisione Operativa – Farmacie Medigas</header>
+<header>Decisione Operativa – Farmacie Medigas</header>
+
+<div class="banner">
+    <b>Procedura sempre valida – Farmacie Medigas</b><br>
+    Tutte le farmacie BS, TO, Emilia e Sud Sardegna devono sempre inserire la richiesta sul Portale.<br>
+    <b>Uffici aperti</b> → invita all’inserimento (non si può gestire telefonicamente) + Generica Brescia.<br>
+    <b>Uffici chiusi</b> → in urgenza gestisci la consegna contattando il vettore + invita all’inserimento + Generica Brescia.
+</div>
 
 <div class="container">
 
     <div class="section">
-        <h2>Input</h2>
+        <h2>Dati richiesta farmacia</h2>
 
         <label>Area farmacia</label>
         <select id="area" onchange="popolaSottozone()">
@@ -49,41 +144,29 @@
         <label>Giorno richiesto dalla farmacia</label>
         <input type="date" id="dataRichiesta">
 
-        <label>Data e ora inserimento su Infomed</label>
+        <label>Data e ora inserimento su Portale</label>
         <input type="datetime-local" id="dataInserimento">
 
-        <button onclick="calcola()">Genera Decisione Operativa</button>
+        <button onclick="calcola()">Genera Decisione</button>
     </div>
 
     <div class="section">
         <h2>Risultato</h2>
-        <div id="result" class="output"></div>
+        <div id="result" class="output">In attesa dei dati…</div>
     </div>
 
 </div>
 
 <script>
-// ------------------------------
-//       SOTTOZONE
-// ------------------------------
+/* ================================
+   SOTTOZONE PER AREA
+================================ */
 const sottozoneByArea = {
     brescia: [
-        "Franciacorta",
-        "Lago d'Iseo",
-        "Brescia città",
-        "Bassa Bresciana",
-        "Valsabbia",
-        "Vallecamonica",
-        "Lago di Garda",
-        "Valtrompia"
+        "Franciacorta", "Lago d'Iseo", "Brescia città", "Bassa Bresciana",
+        "Valsabbia", "Vallecamonica", "Lago di Garda", "Valtrompia"
     ],
-    emilia: [
-        "Cesena",
-        "Forlì",
-        "Ravenna",
-        "Faenza",
-        "Lugo"
-    ],
+    emilia: ["Cesena", "Forlì", "Ravenna", "Faenza", "Lugo"],
     torino: ["Comuni di Torino"],
     sardegna: ["Sud Sardegna"]
 };
@@ -95,21 +178,20 @@ function popolaSottozone() {
 
     if (!area || area === "resto") {
         zonaSel.disabled = true;
-        zonaSel.innerHTML = `<option value="">${area === "resto" ? "Nessuna sottozona necessaria" : "— Seleziona l'area prima —"}</option>`;
+        zonaSel.innerHTML = `<option value="">${
+            area === "resto" ? "Nessuna sottozona necessaria" : "— Seleziona l'area prima —"
+        }</option>`;
         return;
     }
 
     zonaSel.disabled = false;
     zonaSel.innerHTML = `<option value="">— Seleziona zona —</option>`;
-
-    sottozoneByArea[area].forEach(z => {
-        zonaSel.innerHTML += `<option value="${z}">${z}</option>`;
-    });
+    sottozoneByArea[area].forEach(z => zonaSel.innerHTML += `<option value="${z}">${z}</option>`);
 }
 
-// ------------------------------
-//     COSTI SUPPLEMENTO
-// ------------------------------
+/* ================================
+   COSTI SUPPLEMENTO
+================================ */
 const costi = {
     brescia: "25 €",
     emilia: "50 €",
@@ -118,9 +200,9 @@ const costi = {
     resto: "0 €"
 };
 
-// ------------------------------
-//    FUNZIONI SUPPORTO
-// ------------------------------
+/* ================================
+   UTILITY
+================================ */
 function isWorkingDay(d) {
     return d.getDay() >= 1 && d.getDay() <= 5;
 }
@@ -143,9 +225,9 @@ function formatDate(d) {
     return `${String(d.getDate()).padStart(2,'0')}/${String(d.getMonth()+1).padStart(2,'0')}/${d.getFullYear()}`;
 }
 
-// ------------------------------
-//     PIANO CONSEGNE
-// ------------------------------
+/* ================================
+   PIANO CONSEGNE
+================================ */
 function isInPiano(area, zona, g) {
     const map = {
         brescia: {
@@ -177,13 +259,12 @@ function isInPiano(area, zona, g) {
             venerdi: ["Sud Sardegna"]
         }
     };
-
     return map[area]?.[g]?.includes(zona) ?? false;
 }
 
-// ------------------------------
-//     CUT-OFF + GIORNO GARANTITO
-// ------------------------------
+/* ================================
+   CALCOLO GIORNO GARANTITO
+================================ */
 function computeGuaranteedDate(area, zona, dtIns) {
     const d0 = new Date(dtIns.getFullYear(), dtIns.getMonth(), dtIns.getDate());
     const day = d0.getDay();
@@ -191,11 +272,10 @@ function computeGuaranteedDate(area, zona, dtIns) {
     let baseDate;
     let offset;
 
-    // Sabato / Domenica = come lunedì entro le 13 → +1 giorno
     if (day === 6 || day === 0) {
         const toMonday = (day === 6 ? 2 : 1);
         baseDate = addDays(d0, toMonday);
-        offset = 1;
+        offset = 1; 
     } else {
         const h = dtIns.getHours();
         const m = dtIns.getMinutes();
@@ -205,7 +285,6 @@ function computeGuaranteedDate(area, zona, dtIns) {
     }
 
     let guaranteed = addWorkingDays(baseDate, offset);
-
     const giorni = ["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
 
     while (true) {
@@ -217,9 +296,9 @@ function computeGuaranteedDate(area, zona, dtIns) {
     return guaranteed;
 }
 
-// ------------------------------
-//     CALCOLO COMPLETO
-// ------------------------------
+/* ================================
+   FUNZIONE PRINCIPALE
+================================ */
 function calcola() {
     const area = document.getElementById("area").value;
     const zona = document.getElementById("zona").value;
@@ -228,58 +307,48 @@ function calcola() {
     const out = document.getElementById("result");
 
     if (!area || !dRich || !dIns || (area !== "resto" && !zona)) {
-        out.innerHTML = "⚠️ Compila tutti i campi (inclusa la zona).";
+        out.innerHTML = "⚠️ Compila tutti i campi.";
         return;
     }
 
     const dtRich = new Date(dRich);
     const dtIns = new Date(dIns);
-
     const giorni = ["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
     const giornoRich = giorni[dtRich.getDay()];
 
-    // Resto d’Italia → molto più semplice
     if (area === "resto") {
-        out.innerHTML =
-`Area: RESTO D’ITALIA
+        out.innerHTML = `Area Resto d’Italia:
 La farmacia può chiamare telefonicamente.
-Nessun costo aggiuntivo.
-Fine.`;
+Nessun costo aggiuntivo.`;
         return;
     }
 
-    // Piano richiesto
     const inPiano = isInPiano(area, zona, giornoRich);
-
-    // Giorno garantito
     const dtGarantito = computeGuaranteedDate(area, zona, dtIns);
     const giornoGarantito = giorni[dtGarantito.getDay()];
 
     const reqDay = new Date(dtRich.getFullYear(), dtRich.getMonth(), dtRich.getDate());
     const garDay = new Date(dtGarantito.getFullYear(), dtGarantito.getMonth(), dtGarantito.getDate());
 
-    // -----------------------
-    //      SUPPLEMENTO
-    // -----------------------
     let supplemento = "NO";
     let motivo = "La richiesta rispetta il cut-off e il piano consegne.";
 
     if (!inPiano) {
         supplemento = "SI";
-        motivo = "La farmacia richiede un giorno non previsto dal piano consegne.";
+        motivo = "Giorno richiesto non previsto dal piano consegne.";
     } else if (reqDay < garDay) {
         supplemento = "SI";
-        motivo = "La farmacia richiede un giorno precedente a quello garantito dal cut-off.";
+        motivo = "Richiesta precedente al giorno garantito dal cut-off.";
     }
 
-    out.innerHTML =
+    out.innerHTML = 
 `📍 Area: ${area.toUpperCase()}
 Zona: ${zona}
 
 Giorno richiesto: ${giornoRich.toUpperCase()} (${formatDate(reqDay)})
 Giorno garantito (cut-off + piano): ${giornoGarantito.toUpperCase()} (${formatDate(garDay)})
 
-Piano consegne (richiesto): ${inPiano ? "✔ In piano" : "⛔ Fuori piano"}
+Piano consegne (giorno richiesto): ${inPiano ? "✔ In piano" : "⛔ Fuori piano"}
 Supplemento: ${supplemento} (importo zona: ${costi[area]})
 Motivo: ${motivo}`;
 }
