--- a/index.html
+++ b/index.html
@@ -6,99 +6,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-    body {
-        font-family: 'Segoe UI', Arial, sans-serif;
-        background: #f2f4f7;
-        margin: 0;
-        padding: 0;
-    }
-
-    header {
-        background: #1e4e79;
-        color: white;
-        padding: 20px;
-        text-align: center;
-        font-size: 24px;
-        font-weight: 700;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.25);
-    }
-
-    .banner {
-        background: #1e4e79;
-        color: #ffffff;
-        padding: 16px 20px;
-        margin: 20px;
-        border-radius: 12px;
-        font-size: 15px;
-        line-height: 1.5;
-        box-shadow: 0 3px 8px rgba(0,0,0,0.18);
-    }
-
-    .container {
-        max-width: 900px;
-        margin: 0 auto;
-        padding: 10px 20px 40px;
-    }
-
-    .section {
-        background: white;
-        padding: 22px;
-        border-radius: 14px;
-        box-shadow: 0 3px 10px rgba(0,0,0,0.12);
-        margin-bottom: 20px;
-    }
-
-    .section h2 {
-        margin-top: 0;
-        color: #1e4e79;
-        font-size: 20px;
-        font-weight: 700;
-    }
-
-    label {
-        font-weight: 600;
-        display: block;
+    body { font-family: 'Segoe UI', Arial, sans-serif; background: #f2f4f7; margin: 0; padding: 0; }
+    header { background: #1e4e79; color: white; padding: 24px; text-align: center; font-size: 24px; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.2); }
+    .container { max-width: 900px; margin: 30px auto; padding: 0 20px; }
+    .section { background: white; padding: 22px; border-radius: 14px; margin-bottom: 25px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); }
+    .section h2 { margin-top: 0; color: #1e4e79; font-size: 20px; font-weight: 600; border-left: 6px solid #1e4e79; padding-left: 10px; }
+    label { font-weight: 600; display: block; margin-top: 14px; font-size: 15px; }
+    select, input { width: 100%; padding: 12px; margin-top: 6px; border-radius: 8px; border: 1px solid #b3b3b3; background: #fafafa; font-size: 15px; }
+    button { width: 100%; padding: 15px; margin-top: 25px; background: #1e4e79; color: white; border: none; font-size: 18px; border-radius: 10px; cursor: pointer; font-weight: 600; box-shadow: 0 3px 6px rgba(0,0,0,0.2); }
+    button:hover { background: #163d61; }
+    .output { background: #ffffff; padding: 25px; margin-top: 15px; border-left: 6px solid #1e4e79; border-radius: 12px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); font-size: 16px; line-height: 1.6; white-space: normal; }
+    
+    /* layout nuove attivazioni + consegne */
+    .col-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
         margin-top: 10px;
-        font-size: 15px;
     }
-
-    select, input {
-        width: 100%;
-        padding: 12px;
-        margin-top: 6px;
-        border-radius: 8px;
-        border: 1px solid #b3b3b3;
-        background: #fafafa;
-        font-size: 15px;
-    }
-
-    button {
-        width: 100%;
-        padding: 14px;
-        margin-top: 20px;
-        background: #1e4e79;
-        color: white;
-        border: none;
-        font-size: 18px;
-        border-radius: 10px;
-        cursor: pointer;
-        font-weight: 600;
-        box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-    }
-
-    button:hover {
-        background: #163d61;
-    }
-
-    .output {
-        background: white;
-        padding: 25px;
-        border-left: 6px solid #1e4e79;
+    .col {
+        flex: 1;
+        min-width: 320px;
+        background: #ffffff;
+        padding: 18px;
         border-radius: 12px;
-        font-size: 16px;
-        line-height: 1.6;
-        box-shadow: 0 3px 10px rgba(0,0,0,0.12);
+        border-left: 5px solid #1e4e79;
+        box-shadow: 0 3px 8px rgba(0,0,0,0.10);
     }
+    .col h3 {
+        margin: 0 0 10px 0;
+        font-size: 18px;
+        color: #1e4e79;
+    }
+    .col ul { padding-left: 22px; }
 </style>
 </head>
 
@@ -106,261 +46,126 @@
 
 <header>Decisione Operativa – Farmacie Medigas</header>
 
-<div class="banner">
-    <b>Procedura Medigas</b><br>
-    Tutte le farmacie BS, TO, Emilia e Sud Sardegna devono sempre inserire la richiesta sul Portale.<br>
-    <b>Uffici aperti:</b> invita all’inserimento (non si gestisce telefonicamente) + Generica Brescia.<br>
-    <b>Uffici chiusi:</b> in urgenza gestisci la consegna + invita all’inserimento + Generica Brescia.
-</div>
-
 <div class="container">
 
-    <div class="section">
-        <h2>Dati richiesta farmacia</h2>
+<div class="section">
+    <h2>Input</h2>
 
-        <label>Area farmacia</label>
-        <select id="area" onchange="popolaSottozone()">
-            <option value="">— Seleziona —</option>
-            <option value="brescia">Brescia e provincia</option>
-            <option value="torino">Comuni di Torino</option>
-            <option value="emilia">Emilia Romagna</option>
-            <option value="sardegna">Sud Sardegna</option>
-            <option value="resto">Resto d’Italia</option>
-        </select>
+    <label>Area farmacia</label>
+    <select id="area">
+        <option value="">— Seleziona —</option>
+        <option value="resto">Resto d'Italia</option>
+        <option value="brescia">Brescia e provincia</option>
+        <option value="torino">Comuni Torino</option>
+        <option value="emilia">Emilia Romagna</option>
+        <option value="sudsardegna">Sud Sardegna</option>
+    </select>
 
-        <label>Zona / territorio</label>
-        <select id="zona">
-            <option value="">— Seleziona l'area prima —</option>
-        </select>
+    <label>Giorno richiesto dalla farmacia</label>
+    <input type="date" id="giornoRichiesto">
 
-        <label>Giorno richiesto</label>
-        <input type="date" id="dataRichiesta">
+    <label>Data e ora inserimento su Infomed</label>
+    <input type="datetime-local" id="inserimento">
 
-        <label>Data e ora inserimento su Portale</label>
-        <input type="datetime-local" id="dataInserimento">
+    <button onclick="calcola()">Genera Decisione Operativa</button>
+</div>
 
-        <button onclick="calcola()">Genera Decisione</button>
-    </div>
-
-    <div class="section">
-        <h2>Risultato</h2>
-        <div id="result" class="output">In attesa dei dati…</div>
-    </div>
+<div class="section">
+    <h2>Risultato</h2>
+    <div id="result" class="output">Compila i campi per generare la decisione operativa.</div>
+</div>
 
 </div>
 
+
 <script>
-/* ================================
-   SOTTOZONE PER AREA
-================================ */
-const sottozoneByArea = {
-    brescia: ["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia","Vallecamonica","Lago di Garda","Valtrompia"],
-    emilia: ["Cesena","Forlì","Ravenna","Faenza","Lugo"],
-    torino: ["Comuni di Torino"],
-    sardegna: ["Sud Sardegna"]
-};
-
-function popolaSottozone() {
+function calcola() {
     const area = document.getElementById("area").value;
-    const zonaSel = document.getElementById("zona");
-    zonaSel.innerHTML = "";
+    const out = document.getElementById("result");
 
-    if (!area || area === "resto") {
-        zonaSel.disabled = true;
-        zonaSel.innerHTML = `<option value="">${
-            area === "resto" ? "Nessuna sottozona necessaria" : "— Seleziona l'area prima —"
-        }</option>`;
-        return;
-    }
-
-    zonaSel.disabled = false;
-    zonaSel.innerHTML = `<option value="">— Seleziona zona —</option>`;
-    sottozoneByArea[area].forEach(z => zonaSel.innerHTML += `<option value="${z}">${z}</option>`);
-}
-
-/* ================================
-   COSTI SUPPLEMENTO
-================================ */
-const costi = {
-    brescia: "25 €",
-    emilia: "50 €",
-    torino: "50 €",
-    sardegna: "—",
-    resto: "0 €"
-};
-
-/* ================================
-   UTILS
-================================ */
-function isWorkingDay(d){return d.getDay()>=1 && d.getDay()<=5;}
-function addDays(d,n){return new Date(d.getTime()+n*86400000);}
-function addWorkingDays(start,n){
-    let d=new Date(start), added=0;
-    while(added<n){d=addDays(d,1);if(isWorkingDay(d)) added++;} return d;
-}
-function formatDate(d){
-    return `${String(d.getDate()).padStart(2,'0')}/${String(d.getMonth()+1).padStart(2,'0')}/${d.getFullYear()}`;
-}
-
-/* ================================
-   LOGICA PIANI BS / TO / EMILIA / SARDEGNA
-================================ */
-function isInPiano(area,zona,day){
-    const map={
-        brescia:{
-            lunedi:["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia"],
-            martedi:["Vallecamonica","Lago di Garda","Brescia città","Valtrompia"],
-            mercoledi:["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia"],
-            giovedi:["Vallecamonica","Lago di Garda","Brescia città","Valtrompia"],
-            venerdi:["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia"]
-        },
-        emilia:{
-            lunedi:["Cesena","Ravenna","Faenza","Lugo"],
-            martedi:["Forlì","Ravenna","Faenza","Lugo"],
-            mercoledi:["Cesena","Ravenna","Faenza","Lugo"],
-            giovedi:["Forlì","Ravenna","Faenza","Lugo"],
-            venerdi:["Cesena","Ravenna","Faenza","Lugo"]
-        },
-        torino:{
-            lunedi:["Comuni di Torino"], martedi:["Comuni di Torino"], mercoledi:["Comuni di Torino"],
-            giovedi:["Comuni di Torino"], venerdi:["Comuni di Torino"]
-        },
-        sardegna:{
-            lunedi:["Sud Sardegna"],
-            giovedi:["Sud Sardegna"],
-            venerdi:["Sud Sardegna"]
-        }
-    };
-    return map[area]?.[day]?.includes(zona) ?? false;
-}
-
-/* ================================
-   CALCOLO GIORNO GARANTITO
-================================ */
-function computeGuaranteedDate(area,zona,dtIns){
-    const giorni=["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
-    const d0=new Date(dtIns.getFullYear(),dtIns.getMonth(),dtIns.getDate());
-    const day=d0.getDay();
-
-    let baseDate, offset;
-    if(day===6||day===0){
-        baseDate=addDays(d0, day===6?2:1);
-        offset=1;
-    } else {
-        const h=dtIns.getHours(), m=dtIns.getMinutes();
-        const entro=(h<13 || (h===13 && m===0));
-        offset=entro?1:2;
-        baseDate=d0;
-    }
-
-    let garantito=addWorkingDays(baseDate,offset);
-
-    while(true){
-        const name=giorni[garantito.getDay()];
-        if(isWorkingDay(garantito) && isInPiano(area,zona,name)) break;
-        garantito=addWorkingDays(garantito,1);
-    }
-
-    return garantito;
-}
-
-/* ================================
-   FUNZIONE PRINCIPALE
-================================ */
-function calcola(){
-    const area=document.getElementById("area").value;
-    const zona=document.getElementById("zona").value;
-    const dRich=document.getElementById("dataRichiesta").value;
-    const dIns=document.getElementById("dataInserimento").value;
-    const out=document.getElementById("result");
-
-    if(!area || !dRich || !dIns || (area!=="resto" && !zona)){
-        out.innerHTML="⚠️ Compila tutti i campi.";
-        return;
-    }
-
-    const dtRich=new Date(dRich);
-    const dtIns=new Date(dIns);
-    const giorni=["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
-    const giornoRich=giorni[dtRich.getDay()];
-
-    /* ============================================================
-       🔵 SELEZIONE RESTO D’ITALIA → MOSTRA PROCEDURA COMPLETA
-    ============================================================ */
-    if(area==="resto"){
+    if (area === "resto") {
         out.innerHTML = `
+
 <b>RESTO D’ITALIA – Procedura completa</b><br><br>
 
-<b>Nuove Attivazioni</b><br>
-La farmacia può richiedere una nuova attivazione.<br>
-L’operatore deve verificare la copertura nell’allegato Medigas su SharePoint.<br><br>
+<div class="col-container">
 
-<b>Zone dove Medigas effettua nuove attivazioni O₂ gassoso</b><br>
-<b>Lombardia</b><br>
-• Varese e provincia<br>
-• Como e provincia<br>
-• Lecco e provincia<br>
-• Monza Brianza e provincia<br>
-• Farmacia di Aprica (SO)<br><br>
+    <!-- COL SINISTRA -->
+    <div class="col">
+        <h3>Nuova Attivazione O₂ gassoso</h3>
 
-<b>Lazio</b><br>
-• Roma e provincia<br><br>
+        La farmacia può richiedere una nuova attivazione.<br>
+        Verificare la copertura nell’allegato Medigas su SharePoint.<br><br>
 
-<b>Veneto</b><br>
-• Tutta la regione<br><br>
+        <b>Zone dove Medigas effettua nuove attivazioni</b><br><br>
 
-<b>Se NON coperta:</b> “Medigas in questa zona continua a servire solo i pazienti già attivi e non effettua nuove attivazioni.”<br><br>
+        <b>Lombardia</b>
+        <ul>
+            <li>Varese e provincia</li>
+            <li>Como e provincia</li>
+            <li>Lecco e provincia</li>
+            <li>Monza Brianza e provincia</li>
+            <li>Farmacia di Aprica (SO)</li>
+        </ul>
 
-<b>NB – Nuova attivazione dopo le 17:00 con consegna per il giorno successivo:</b><br>
-L’operatore deve avvisare telefonicamente il vettore che Assago potrebbe inserire la consegna nel piano del giorno seguente.<br><br>
+        <b>Lazio</b>
+        <ul><li>Roma e provincia</li></ul>
 
-<hr>
+        <b>Veneto</b>
+        <ul><li>Tutta la regione</li></ul>
 
-<b>Consegne Ordinarie (paziente già attivo)</b><br>
-Le consegne seguono la procedura generale Medigas.<br>
-Lo strumento non calcola giorni di piano né supplementi per il Resto d’Italia.<br><br>
+        <b>Se NON coperta:</b><br>
+        “Medigas in questa zona continua a servire solo i pazienti già attivi e non effettua nuove attivazioni.”<br><br>
 
-<b>Riepilogo:</b><br>
-• Nuove attivazioni → verifica copertura + eventuale nota 17:00<br>
-• Zone non coperte → NO nuove attivazioni<br>
-• Pazienti già attivi → consegna ordinaria conforme a procedura Medigas<br>
+        <b>NB – Nuova attivazione dopo le 17:00</b><br>
+        Se la consegna è per il giorno successivo → avvisare telefonicamente il vettore.
+    </div>
+
+    <!-- COL DESTRA -->
+    <div class="col">
+        <h3>Consegna Ordinaria (paziente già attivo)</h3>
+
+        La farmacia può richiedere consegna in qualsiasi giorno/orario.<br>
+        Si applica la procedura generale Medigas.<br><br>
+
+        <b>Quando chiamare il vettore</b>
+        <ul>
+            <li>Consegna in giornata</li>
+            <li>Consegna per sabato/domenica/festivo <b>solo se:</b></li>
+            <ul>
+                <li>la chiamata arriva il venerdì dopo le 19:00</li>
+                <li>oppure la chiamata arriva sabato/domenica</li>
+            </ul>
+        </ul>
+
+        <b>Regola del venerdì → sabato</b>
+        <ul>
+            <li><b>Prima delle 19:00</b> → la consegna si fa <b>venerdì</b>, non sabato</li>
+            <li><b>Dopo le 19:00</b> → consegna possibile il sabato</li>
+        </ul>
+
+        <b>Richiesta sabato o domenica</b>
+        <ul>
+            <li>Gestire come <b>OLT emergenza</b></li>
+            <li>Chiamare il vettore reperibile</li>
+            <li>Inserire Infomed come emergenza</li>
+        </ul>
+
+        <b>Riepilogo</b>
+        <ul>
+            <li>In giornata → contattare vettore</li>
+            <li>Weekend/festivi → reperibile</li>
+            <li>Venerdì prima 19 → consegna venerdì</li>
+            <li>Venerdì dopo 19 → consegna sabato</li>
+        </ul>
+    </div>
+
+</div>
 `;
         return;
     }
 
-    /* ============================================================
-       🔵 AREE CALCOLATE (BS / TO / EMILIA / SUD SARDEGNA)
-    ============================================================ */
-
-    const inPiano=isInPiano(area,zona, giornoRich);
-    const dtGarantito=computeGuaranteedDate(area,zona,dtIns);
-    const giornoGarantito=giorni[dtGarantito.getDay()];
-
-    const reqDay=new Date(dtRich.getFullYear(),dtRich.getMonth(),dtRich.getDate());
-    const garDay=new Date(dtGarantito.getFullYear(),dtGarantito.getMonth(),dtGarantito.getDate());
-
-    let supplemento="NO";
-    let motivo="La richiesta rispetta il cut-off e il piano consegne.";
-
-    if(!inPiano){
-        supplemento="SI";
-        motivo="Giorno richiesto non previsto dal piano consegne.";
-    }
-    else if(reqDay < garDay){
-        supplemento="SI";
-        motivo="Richiesta precedente al giorno garantito dal cut-off.";
-    }
-
-    out.innerHTML=
-`📍 <b>Area:</b> ${area.toUpperCase()}<br>
-<b>Zona:</b> ${zona}<br><br>
-
-<b>Giorno richiesto:</b> ${giornoRich.toUpperCase()} (${formatDate(reqDay)})<br>
-<b>Giorno garantito (cut-off + piano):</b> ${giornoGarantito.toUpperCase()} (${formatDate(garDay)})<br><br>
-
-<b>Piano consegne:</b> ${inPiano ? "✔ In piano" : "⛔ Fuori piano"}<br>
-<b>Supplemento:</b> ${supplemento} (importo zona: ${costi[area]})<br>
-<b>Motivo:</b> ${motivo}`;
+    out.innerHTML = "Per questa area è già attiva la Decisione Operativa specifica.";
 }
 </script>
 
