--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     button:hover { background: #163d61; }
     .output { background: #ffffff; padding: 25px; margin-top: 15px; border-left: 6px solid #1e4e79; border-radius: 12px; box-shadow: 0 3px 10px rgba(0,0,0,0.12); font-size: 16px; line-height: 1.6; white-space: normal; }
 
-    /* LAYOUT DUE COLONNE */
+    /* Layout due colonne per Resto d'Italia */
     .col-container { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 10px; }
     .col { flex: 1; min-width: 320px; background: #ffffff; padding: 18px; border-radius: 12px;
            border-left: 5px solid #1e4e79; box-shadow: 0 3px 8px rgba(0,0,0,0.10); }
@@ -32,50 +32,47 @@
 
 <div class="container">
 
-<div class="section">
-    <h2>Input</h2>
+    <div class="section">
+        <h2>Input</h2>
 
-    <label>Area farmacia</label>
-    <select id="area" onchange="popolaSottozone()">
-        <option value="">— Seleziona —</option>
-        <option value="resto">Resto d'Italia</option>
-        <option value="brescia">Brescia e provincia</option>
-        <option value="torino">Comuni Torino</option>
-        <option value="emilia">Emilia Romagna</option>
-        <option value="sudsardegna">Sud Sardegna</option>
-    </select>
+        <label>Area farmacia</label>
+        <select id="area" onchange="popolaSottozone()">
+            <option value="">— Seleziona —</option>
+            <option value="brescia">Brescia e provincia</option>
+            <option value="torino">Comuni Torino</option>
+            <option value="emilia">Emilia Romagna</option>
+            <option value="sardegna">Sud Sardegna</option>
+            <option value="resto">Resto d'Italia</option>
+        </select>
 
-    <label>Sottozona</label>
-    <select id="zona">
-        <option value="">— Seleziona l'area prima —</option>
-    </select>
+        <label>Sottozona</label>
+        <select id="zona">
+            <option value="">— Seleziona l'area prima —</option>
+        </select>
 
-    <label>Giorno richiesto dalla farmacia</label>
-    <input type="date" id="giornoRichiesto">
+        <label>Giorno richiesto dalla farmacia</label>
+        <input type="date" id="giornoRichiesto">
 
-    <label>Data e ora inserimento su Infomed</label>
-    <input type="datetime-local" id="inserimento">
+        <label>Data e ora inserimento su Portale / Infomed</label>
+        <input type="datetime-local" id="inserimento">
 
-    <button onclick="calcola()">Genera Decisione Operativa</button>
-</div>
+        <button onclick="calcola()">Genera Decisione Operativa</button>
+    </div>
 
-<div class="section">
-    <h2>Risultato</h2>
-    <div id="result" class="output">Compila i campi per generare la decisione operativa.</div>
-</div>
+    <div class="section">
+        <h2>Risultato</h2>
+        <div id="result" class="output">Compila i campi per generare la decisione operativa.</div>
+    </div>
 
 </div>
 
 <script>
-
 /* ================================
-   SOTTOZONE
+   SOTTOZONE SOLO DOVE SERVONO
 ================================ */
 const sottozoneByArea = {
     brescia: ["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia","Vallecamonica","Lago di Garda","Valtrompia"],
-    torino: ["Comuni di Torino"],
-    emilia: ["Cesena","Forlì","Ravenna","Faenza","Lugo"],
-    sudsardegna: ["Sud Sardegna"]
+    emilia: ["Cesena","Forlì","Ravenna","Faenza","Lugo"]
 };
 
 function popolaSottozone() {
@@ -84,18 +81,137 @@ function popolaSottozone() {
 
     zona.innerHTML = "";
 
-    if (!area || area === "resto") {
+    if (!area) {
         zona.disabled = true;
-        zona.innerHTML = `<option value="">${
-            area === "resto" ? "Nessuna sottozona richiesta" : "— Seleziona l'area prima —"
-        }</option>`;
+        zona.innerHTML = `<option value="">— Seleziona l'area prima —</option>`;
         return;
     }
 
+    // Niente sottozone per Torino, Sud Sardegna, Resto d'Italia
+    if (area === "torino" || area === "sardegna" || area === "resto") {
+        zona.disabled = true;
+        zona.innerHTML = `<option value="">Nessuna sottozona richiesta</option>`;
+        return;
+    }
+
+    // Brescia / Emilia → sottozone abilitate
     zona.disabled = false;
     zona.innerHTML = `<option value="">— Seleziona sottozona —</option>`;
+    sottozoneByArea[area].forEach(z => {
+        zona.innerHTML += `<option value="${z}">${z}</option>`;
+    });
+}
 
-    sottozoneByArea[area].forEach(z => zona.innerHTML += `<option value="${z}">${z}</option>`);
+/* ================================
+   COSTI SUPPLEMENTO
+================================ */
+const costi = {
+    brescia: "25 €",
+    emilia: "50 €",
+    torino: "50 €",
+    sardegna: "—",
+    resto: "0 €"
+};
+
+/* ================================
+   UTILITY DATE
+================================ */
+function isWorkingDay(d) {
+    const day = d.getDay();
+    return day >= 1 && day <= 5; // lun–ven
+}
+
+function addDays(d, n) {
+    return new Date(d.getTime() + n * 86400000);
+}
+
+function addWorkingDays(start, n) {
+    let d = new Date(start);
+    let added = 0;
+    while (added < n) {
+        d = addDays(d, 1);
+        if (isWorkingDay(d)) added++;
+    }
+    return d;
+}
+
+function formatDate(d) {
+    const dd = String(d.getDate()).padStart(2, "0");
+    const mm = String(d.getMonth() + 1).padStart(2, "0");
+    const yyyy = d.getFullYear();
+    return `${dd}/${mm}/${yyyy}`;
+}
+
+/* ================================
+   PIANI CONSEGNE (BS / TO / EMILIA / SUD SARDEGNA)
+================================ */
+function isInPiano(area, zona, dayName) {
+    const map = {
+        brescia: {
+            lunedi:    ["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia"],
+            martedi:   ["Vallecamonica","Lago di Garda","Brescia città","Valtrompia"],
+            mercoledi: ["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia"],
+            giovedi:   ["Vallecamonica","Lago di Garda","Brescia città","Valtrompia"],
+            venerdi:   ["Franciacorta","Lago d'Iseo","Brescia città","Bassa Bresciana","Valsabbia"]
+        },
+        emilia: {
+            lunedi:    ["Cesena","Ravenna","Faenza","Lugo"],
+            martedi:   ["Forlì","Ravenna","Faenza","Lugo"],
+            mercoledi: ["Cesena","Ravenna","Faenza","Lugo"],
+            giovedi:   ["Forlì","Ravenna","Faenza","Lugo"],
+            venerdi:   ["Cesena","Ravenna","Faenza","Lugo"]
+        },
+        torino: {
+            lunedi:    ["Comuni di Torino"],
+            martedi:   ["Comuni di Torino"],
+            mercoledi: ["Comuni di Torino"],
+            giovedi:   ["Comuni di Torino"],
+            venerdi:   ["Comuni di Torino"]
+        },
+        sardegna: {
+            lunedi:  ["Sud Sardegna"],
+            giovedi: ["Sud Sardegna"],
+            venerdi: ["Sud Sardegna"]
+        }
+    };
+
+    const list = map[area]?.[dayName] || [];
+    return list.includes(zona);
+}
+
+/* ================================
+   CALCOLO GIORNO GARANTITO
+================================ */
+function computeGuaranteedDate(area, zona, dtIns) {
+    const giorni = ["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
+    const baseDay = new Date(dtIns.getFullYear(), dtIns.getMonth(), dtIns.getDate());
+    const day = baseDay.getDay();
+
+    let baseDate, offset;
+
+    // Sabato / Domenica → si conta dal lunedì (1° giorno lavorativo successivo)
+    if (day === 6 || day === 0) {
+        baseDate = (day === 6) ? addDays(baseDay, 2) : addDays(baseDay, 1);
+        offset = 1;
+    } else {
+        // Lun–Ven → entro le 13: 1° g.lav successivo, dopo le 13: 2° g.lav successivo
+        const h = dtIns.getHours();
+        const m = dtIns.getMinutes();
+        const entroCutOff = (h < 13) || (h === 13 && m === 0);
+        offset = entroCutOff ? 1 : 2;
+        baseDate = baseDay;
+    }
+
+    let garantito = addWorkingDays(baseDate, offset);
+
+    // Sposto in avanti finché non trovo un giorno "in piano" per quell'area/zona
+    while (true) {
+        const name = giorni[garantito.getDay()];
+        if (isWorkingDay(garantito) && isInPiano(area, zona, name)) break;
+        garantito = addWorkingDays(garantito, 1);
+    }
+
+    return garantito;
 }
 
 /* ================================
@@ -103,11 +219,25 @@ function popolaSottozone() {
 ================================ */
 function calcola() {
     const area = document.getElementById("area").value;
+    const zonaSelect = document.getElementById("zona").value;
+    const dRich = document.getElementById("giornoRichiesto").value;
+    const dIns = document.getElementById("inserimento").value;
     const out = document.getElementById("result");
 
+    if (!area || !dRich || !dIns) {
+        out.innerHTML = "⚠️ Compila tutti i campi obbligatori.";
+        return;
+    }
+
+    // Sottozona obbligatoria solo per Brescia / Emilia
+    if ((area === "brescia" || area === "emilia") && !zonaSelect) {
+        out.innerHTML = "⚠️ Seleziona anche la sottozona.";
+        return;
+    }
+
+    // Resto d'Italia → solo procedura, niente calcoli
     if (area === "resto") {
         out.innerHTML = `
-
 <b>RESTO D’ITALIA – Procedura Operativa</b><br><br>
 
 <div class="col-container">
@@ -117,7 +247,7 @@ function calcola() {
         <h3>Nuova Attivazione O₂ gassoso</h3>
 
         La farmacia può richiedere una nuova attivazione.<br>
-        L’operatore deve verificare se la località rientra nelle zone dove Medigas effettua nuove attivazioni.<br><br>
+        L’operatore deve verificare se la località rientra nelle zone dove Medigas effettua nuove attivazioni (scheda sottostante).<br><br>
 
         <b>Zone dove Medigas effettua nuove attivazioni</b><br><br>
 
@@ -187,10 +317,47 @@ function calcola() {
         return;
     }
 
-    /* AREE NON RESTO D’ITALIA → MESSAGGIO BASE (il calcolo effettivo lo aggiungeremo quando serve) */
-    out.innerHTML = "Per questa area è attiva la Decisione Operativa specifica (piano consegne e supplementi).";
-}
+    // Calcolo per BS / TO / EMILIA / SUD SARDEGNA
+    const dtRich = new Date(dRich);
+    const dtIns = new Date(dIns);
+    const giorni = ["domenica","lunedi","martedi","mercoledi","giovedi","venerdi","sabato"];
+    const giornoRich = giorni[dtRich.getDay()];
 
+    // Zona effettiva (anche per torino/sardegna senza sottozona)
+    let zonaEffettiva = zonaSelect;
+    if (area === "torino") zonaEffettiva = "Comuni di Torino";
+    if (area === "sardegna") zonaEffettiva = "Sud Sardegna";
+
+    const inPiano = isInPiano(area, zonaEffettiva, giornoRich);
+    const dtGarantito = computeGuaranteedDate(area, zonaEffettiva, dtIns);
+    const giornoGarantito = giorni[dtGarantito.getDay()];
+
+    const reqDay = new Date(dtRich.getFullYear(), dtRich.getMonth(), dtRich.getDate());
+    const garDay = new Date(dtGarantito.getFullYear(), dtGarantito.getMonth(), dtGarantito.getDate());
+
+    let supplemento = "NO";
+    let motivo = "La richiesta rispetta cut-off e piano consegne.";
+
+    if (!inPiano) {
+        supplemento = "SI";
+        motivo = "Giorno richiesto non previsto dal piano consegne.";
+    } else if (reqDay < garDay) {
+        supplemento = "SI";
+        motivo = "Richiesta precedente al giorno garantito da cut-off + piano.";
+    }
+
+    out.innerHTML = `
+📍 <b>Area:</b> ${area.toUpperCase()}<br>
+<b>Zona:</b> ${zonaEffettiva}<br><br>
+
+<b>Giorno richiesto:</b> ${giornoRich.toUpperCase()} (${formatDate(reqDay)})<br>
+<b>Giorno garantito (cut-off + piano):</b> ${giornoGarantito.toUpperCase()} (${formatDate(garDay)})<br><br>
+
+<b>Piano consegne:</b> ${inPiano ? "✔ In piano" : "⛔ Fuori piano"}<br>
+<b>Supplemento:</b> ${supplemento} (importo zona: ${costi[area]})<br>
+<b>Motivo:</b> ${motivo}
+`;
+}
 </script>
 
 </body>
